# software-foundry

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPLETE_REQUIREMENTS.md  Dockerfile  IMPLEMENTATION_ANALYSIS.md  Makefile  README.md  SETUP.md  additional_requirements.md  audit fix.md  audit_project_diag.py  check_output.txt  check_status.py  debug_check_a7e9.py  debug_check_requirements.py  docker-compose.yml  extract_logs.py  filtered_logs.txt  fix.md  pyproject.toml  requirements-dev.txt  requirements.txt  stress_test_pm.py  test_architect_isolation.py  test_e2e.py  test_engineer_isolation.py  test_failures_utf8.txt  test_pm_isolation.py  test_results.txt
alembic/: env.py
docs/: AGENT_ORCHESTRATION_API.md  API_AUTHENTICATION_GUIDE.md  APPROVAL_WORKFLOW.md  ARCHITECTURE.md  CODEBASE_MAP.md  GIT_INTEGRATION.md  KNOWLEDGE_GRAPH.md  OLLAMA_SETUP.md  PROJECT_LIFECYCLE.md  QWEN_INTEGRATION_SUMMARY.md  REFLEXION_ENGINE.md  TESTING_QA.md  VLLM_SETUP.md
examples/: approval_workflow_demo.py  architect_organization_demo.py  git_integration_demo.py  knowledge_graph_demo.py  project_lifecycle_demo.py  reflexion_demo.py  testing_demo.py
frontend/: package-lock.json  package.json
scratch/: check_infra.py  reset_env.py  verify_full_workflow.py  verify_output.txt
scripts/: check_enum.py  check_ollama.py  fix_e2e.py  test_orchestrator.py  validate_setup.py
tests/: __init__.py  conftest.py  test_agent_control.py  test_agent_orchestration_api.py  test_api_authentication.py  test_approval_service.py  test_approval_workflow_integration.py  test_config.py  (+25 more)
(+118 files in other folders)
